<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crazyflie</name>
  <version>2.0.0</version>
  <description>ROS 2 Package for Bitcraze Crazyflie robots</description>
  <maintainer email="hoenig@tu-berlin.de">Wolfgang Hönig, Kimberly McGuire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_capture_tracking_interfaces</depend>

  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
