<?xml version="1.0"?>
<package>
  <name>crazyswarm</name>
  <version>0.0.3</version>
  <description>Crazyswarm: A swarm of Crazyflie-based quadrotors</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://crazyswarm.readthedocs.io</url>
  <url type="bugtracker">https://github.com/USC-ACTLab/crazyswarm/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>crazyflie_cpp</build_depend>
  <build_depend>crazyflie_driver</build_depend>
  <build_depend>libobjecttracker</build_depend>
  <build_depend>libmotioncapture</build_depend>
  <build_depend>tf_conversion</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>crazyflie_cpp</run_depend>
  <run_depend>crazyflie_driver</run_depend>
  <run_depend>libobjecttracker</run_depend>
  <run_depend>libmotioncapture</run_depend>

</package>
